languages/html/umc_html_parser/src/snapshots/umc_html_parser__parse__test__script_parsing_error.snap
---
source: languages/html/umc_html_parser/src/parse.rs
expression: parse(HTML)
---
Nodes: Vec(
    [
        Script(
            Script {
                span: Span {
                    start: 0,
                    end: 39,
                },
                tag_name: "script",
                attributes: Vec(
                    [],
                ),
                program: Program {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    source_text: "\n      const a =;\n    ",
                    comments: Vec(
                        [],
                    ),
                    hashbang: None,
                    directives: Vec(
                        [],
                    ),
                    body: Vec(
                        [],
                    ),
                    scope_id: Cell {
                        value: None,
                    },
                    source_type: SourceType {
                        language: JavaScript,
                        module_kind: Module,
                        variant: Standard,
                    },
                },
            },
        ),
    ],
)
Errors: [
    OxcDiagnostic {
        inner: OxcDiagnosticInner {
            message: "Unexpected token",
            labels: Some(
                [
                    LabeledSpan {
                        label: None,
                        span: SourceSpan {
                            offset: SourceOffset(
                                16,
                            ),
                            length: 1,
                        },
                        primary: false,
                    },
                ],
            ),
            help: None,
            severity: Error,
            code: OxcCode {
                scope: None,
                number: None,
            },
            url: None,
        },
    },
]
