languages/html/umc_html_parser/src/snapshots/umc_html_parser__parse__test__self_close_tags.snap
---
source: languages/html/umc_html_parser/src/parse.rs
expression: parse(HTML)
---
Nodes: Vec(
    [
        Element(
            Element {
                span: Span {
                    start: 0,
                    end: 6,
                },
                tag_name: "div",
                attributes: Vec(
                    [],
                ),
                children: Vec(
                    [],
                ),
            },
        ),
        Element(
            Element {
                span: Span {
                    start: 6,
                    end: 11,
                },
                tag_name: "p",
                attributes: Vec(
                    [],
                ),
                children: Vec(
                    [],
                ),
            },
        ),
    ],
)
Errors: []
